# pygrocy

./: .doctr-files  .github_changelog_generator  .gitignore  .mutmut-cache  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile-grocy  LICENSE  README.md  RELEASE_GUIDE.md  base.html  docker-compose.yml  github_deploy_key_sebrut_pygrocy.enc  grocy.html  grocy_api_client.html  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  stackaid.json  tox.ini  utils.html
.github/: FUNDING.yml  dependabot.yml  no-response.yml  pull_request_template.md  stale.yml
.github/workflows/: black.yml  validate.yml  (+1 more)
data_models/: battery.html  chore.html  generic.html  index.html  meal_items.html  product.html  system.html  task.html  user.html
errors/: grocy_error.html  index.html
pygrocy/: __init__.py  base.py  grocy.html  grocy.py  grocy_api_client.html  grocy_api_client.py  index.html  utils.html  utils.py
pygrocy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: conftest.py  test_LocationData.py  test_MealPlanResponse.py  test_ShoppingListItem.py  test_battery.py  test_choreDetailsResponse.py  test_chores.py  test_const.py  test_currentChoreResponse.py  test_currentStockResponse.py  test_generic.py  test_grocy.py  test_grocy_api_client.py  test_meal_plan.py  test_meal_plan_sections.py  test_misc.py  test_missingProductResponse.py  test_product.py  test_productDetailsResponse.py  test_product_groups.py  test_shoppinglist.py  test_stock.py  test_system.py  test_tasks.py  test_tasksResponse.py  test_users.py  test_utils.py
(+99 files in other folders)
