[project]
name = "pygrocy"
version = "1.4.1"
license = { file = "LICENSE" }
description = "README.md"
dependencies = [
    "requests",
    "iso8601>=0.1.16,<1.1.0",
    "pytz>=2021.1,<2023.0",
    "tzlocal>=2.1,<5.0",
    "deprecation~=2.1.0",
    "pydantic>=1.8.2,<1.10.0",
]

[project.optional-dependencies]
dev = [
    "responses~=0.21.0",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-cov",
    "vcrpy",
    "pytest-recording",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["pygrocy"]
exclude = ["test*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
