[project]
name = "pygrocy"
version = "1.4.1"
license = { file = "LICENSE" }
description = "README.md"
dependencies = [
    "requests",
    "backports.zoneinfo",      # backports can be removed when python 3.8 support is dropped
    "deprecation~=2.1.0",
    "pydantic>=1.8.2,<1.10.0",
]

[project.optional-dependencies]
dev = [
    "responses~=0.21.0",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-cov",
    "vcrpy",
    "pytest-recording",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["pygrocy"]
exclude = ["test*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
